[tool.poetry]
name = "postmodel"
version = "0.1.0"
description = ""
authors = ["Zhuo Wei <zeaphoo@qq.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pypika = "^0.35.21"
basepy = "^0.1.1"
ciso8601 = "^2.1.3"
contextvars = {version = "^2.4", python = "<3.7"}
asyncpg = "^0.20.1"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
pytest-asyncio = "^0.10.0"
coverage = "^5.0.3"
mkdocs = "^1.0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
